opam-version: "1.2"
name: "echo"
version: "0.1"
maintainer: "Richard Degenne <richard.degenne@perfect-memory.com>"
authors: "Richard Degenne <richard.degenne@perfect-memory.com>"
homepage: "blog.richarddegenne.fr"
license: "GPL"
build: [
  ["jbuilder" "build" "echo.exe"]
]
install: [
  ["jbuilder" "build" "@install"]
  ["jbuilder" "install"]
]
depends: [
  "core"
  "lwt"
  "jbuilder" {build}
]
