opam-version: "1.2"
name: "echo"
version: "0.1"
maintainer: "Richard Degenne <richard.degenne@perfect-memory.com>"
authors: "Richard Degenne <richard.degenne@perfect-memory.com>"
homepage: "blog.richarddegenne.fr"
license: "GPL"
build: [
  ["jbuilder" "build"]
  ["jbuilder" "build" "@install"]
]
depends: [
  "core" {>= "v0.9"}
  "lwt"
  "jbuilder" {build}
]
